// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore invalid times properly 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should not have duplicate ids on the page when multiple date pickers are initialized 1`] = `
<div>
  <div
    class="mobile-time-picker"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-hour"
        id="terra-time-hour-time-input"
        maxlength="2"
        name="terra-time-hour-time-input"
        pattern="\\\\d*"
        placeholder="hh"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-hour-time-input"
      >
        Hours
      </label>
    </div>
    <span
      class="time-spacer"
    >
      :
    </span>
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-minute"
        id="terra-time-minute-time-input"
        maxlength="2"
        name="terra-time-minute-time-input"
        pattern="\\\\d*"
        placeholder="mm"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-minute-time-input"
      >
        Minutes
      </label>
    </div>
    <div
      class="button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-active meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            a.m.
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            p.m.
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="mobile-time-picker"
  >
    <input
      name="time-input-2"
      type="hidden"
      value=""
    />
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-hour"
        id="terra-time-hour-time-input-2"
        maxlength="2"
        name="terra-time-hour-time-input-2"
        pattern="\\\\d*"
        placeholder="hh"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-hour-time-input-2"
      >
        Hours
      </label>
    </div>
    <span
      class="time-spacer"
    >
      :
    </span>
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-minute"
        id="terra-time-minute-time-input-2"
        maxlength="2"
        name="terra-time-minute-time-input-2"
        pattern="\\\\d*"
        placeholder="mm"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-minute-time-input-2"
      >
        Minutes
      </label>
    </div>
    <div
      class="button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-active meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            a.m.
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            p.m.
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="mobile-time-picker"
  >
    <input
      name="time-input-3"
      type="hidden"
      value=""
    />
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-hour"
        id="terra-time-hour-time-input-3"
        maxlength="2"
        name="terra-time-hour-time-input-3"
        pattern="\\\\d*"
        placeholder="hh"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-hour-time-input-3"
      >
        Hours
      </label>
    </div>
    <span
      class="time-spacer"
    >
      :
    </span>
    <div
      class="time-input-group"
    >
      <input
        class="form-input time-input-minute"
        id="terra-time-minute-time-input-3"
        maxlength="2"
        name="terra-time-minute-time-input-3"
        pattern="\\\\d*"
        placeholder="mm"
        size="2"
        value=""
      />
      <label
        class="mobile-input-label"
        for="terra-time-minute-time-input-3"
      >
        Minutes
      </label>
    </div>
    <div
      class="button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-active meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            a.m.
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            p.m.
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons when viewed on a mobile device 1`] = `
<div
  class="mobile-time-picker"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-hour"
      id="terra-time-hour-time-input"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      placeholder="hh"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="terra-time-hour-time-input"
    >
      Hours
    </label>
  </div>
  <span
    class="time-spacer"
  >
    :
  </span>
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-minute"
      id="terra-time-minute-time-input"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      placeholder="mm"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="terra-time-minute-time-input"
    >
      Minutes
    </label>
  </div>
  <div
    class="button-group"
  >
    <button
      aria-disabled="false"
      aria-pressed="true"
      class="button neutral button-group-button is-active meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          a.m.
        </span>
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-pressed="false"
      class="button neutral button-group-button meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          p.m.
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`should render a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="mobile-time-picker"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-hour"
      id="terra-time-hour-time-input"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      placeholder="hh"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="terra-time-hour-time-input"
    >
      Hours
    </label>
  </div>
  <span
    class="time-spacer"
  >
    :
  </span>
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-minute"
      id="terra-time-minute-time-input"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      placeholder="mm"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="terra-time-minute-time-input"
    >
      Minutes
    </label>
  </div>
</div>
`;

exports[`should render a default time input 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should render a disabled time input 1`] = `
<div
  className="disabled time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={true}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={true}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should render a time input with 12 hour clock set 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    className="meridiem-display"
    disabled={false}
    isInvalid={false}
    key="meridiem_display"
    name={null}
    onFocus={[Function]}
    readOnly={true}
    required={false}
    size={4}
    tabIndex="-1"
    value="a.m."
  />
  <div
    key="meridiem_select_box"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <select
      className="time-input-meridiem"
      name="terra-time-meridiem-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      size="2"
      value="a.m."
    >
      <option
        key="anteMeridiem"
        value="a.m."
      >
        a.m.
      </option>
      <option
        key="postMeridiem"
        value="p.m."
      >
        p.m.
      </option>
    </select>
  </div>
</div>
`;

exports[`should render a time input with a default time 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value="T10:45"
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value="10"
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value="45"
  />
</div>
`;

exports[`should render a time input with custom attributes 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    id="terra-time-input"
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    id="terra-time-input"
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should render a time input with onBlur 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should render a time input with onChange 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should render a time input with onInputFocus 1`] = `
<div
  className="time-input"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <Input
    aria-label="Hours"
    className="time-input-hour desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="hh"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <span
    className="time-spacer"
  >
    :
  </span>
  <Input
    aria-label="Minutes"
    className="time-input-minute desktop"
    disabled={false}
    isInvalid={false}
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="mm"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="mobile-time-picker"
>
  <input
    name="time-input"
    type="hidden"
    value=""
  />
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-hour"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      placeholder="hh"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="id-2"
    >
      Hours
    </label>
  </div>
  <span
    class="time-spacer"
  >
    :
  </span>
  <div
    class="time-input-group"
  >
    <input
      class="form-input time-input-minute"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      placeholder="mm"
      size="2"
      value=""
    />
    <label
      class="mobile-input-label"
      for="id-1"
    >
      Minutes
    </label>
  </div>
</div>
`;
